--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.2",
     "express": "^4.19.2",
     "ip": "^2.0.1",
+    "ipware": "^2.0.0",
     "request-ip": "^3.3.0"
   }
 }
